feat: add following, edit account pages

--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-@base {
+@layer base {
     body {
-        @apply text-dark font-bold;
+        @apply font-bold text-dark;
     }
 }
